fix: ajustes em systray, compton, conky

--- a/README.org
+++ b/README.org
@@ -61,14 +61,14 @@ exec dwm
   # DWM e patches
   rm -rf dwm/
   git clone https://git.suckless.org/dwm
-  wget https://dwm.suckless.org/patches/alpha/dwm-alpha-20201019-61bb8b2.diff -P dwm/patches
+  wget https://dwm.suckless.org/patches/systray/dwm-systray-6.3.diff -P dwm/patches  # correções manuais pequenas...
   wget https://dwm.suckless.org/patches/fullgaps/dwm-fullgaps-toggle-20200830.diff -P dwm/patches
   wget https://dwm.suckless.org/patches/pertag/dwm-pertag-20200914-61bb8b2.diff -P dwm/patches
-  wget https://dwm.suckless.org/patches/selfrestart/dwm-r1615-selfrestart.diff -P dwm/patches
   wget https://dwm.suckless.org/patches/autostart/dwm-autostart-20161205-bb3bd6f.diff -P dwm/patches
 
-  #wget https://dwm.suckless.org/patches/systray/dwm-systray-6.3.diff -P dwm/patches  # correções manuais pequenas...
   #wget https://dwm.suckless.org/patches/alpha/dwm-fixborders-6.2.diff -P dwm/patches # correções manuais pequenas...
+  #wget https://dwm.suckless.org/patches/alpha/dwm-alpha-20201019-61bb8b2.diff -P dwm/patches
+  #wget https://dwm.suckless.org/patches/selfrestart/dwm-r1615-selfrestart.diff -P dwm/patches
   #+end_src
 
 * SLSTATUS
